--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,9 @@
 body {
+  background-color: black;
   font-family: "Helvetica Neue", helvetica, arial;
   padding: 15px;
+  color: white;
+  text-shadow: 0px 0px 3px #000, -1px -1px #000;
 }
 
 ul {
@@ -10,5 +13,5 @@ ul {
 }
 
 ul li {
-  line-height: 1.4;
+  line-height: 1.3;
 }
