--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,13 @@
 body {
   background-color: black;
-  font-family: "Helvetica Neue", helvetica, arial;
+  font-family: "Lucida Console", Monaco, monospace;
   padding: 15px;
   color: white;
   text-shadow: 0px 0px 3px #000, -1px -1px #000;
+}
+
+h2 {
+	font-family: "Helvetica Neue", helvetica, arial;
 }
 
 ul {
