--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,10 @@ body {
   color: white;
   text-shadow: 0px 0px 3px #000, -1px -1px #000;
 }
+body {
+  margin: 0px;
+}
+
 
 h2 {
 	font-family: "Helvetica Neue", helvetica, arial;
